# descaler

./: Cargo.toml  Dockerfile  README.md  build.rs  config.yaml  scaler.yaml
scaledjobs.keda.sh-rust/: Cargo.toml  README.md  ov3-scaledjobs.keda.sh.yaml
scaledjobs.keda.sh-rust/.openapi-generator/: FILES
scaledjobs.keda.sh-rust/docs/: ScaledJob.md  ScaledJobAuthenticationRef.md  ScaledJobJobTargetRef.md  ScaledJobJobTargetRefSelector.md  ScaledJobJobTargetRefSelectorMatchExpressions.md  ScaledJobJobTargetRefTemplate.md  ScaledJobJobTargetRefTemplateSpec.md  ScaledJobJobTargetRefTemplateSpecAffinity.md  ScaledJobJobTargetRefTemplateSpecAffinityNodeAffinity.md  ScaledJobJobTargetRefTemplateSpecAffinityNodeAffinityPreference.md  ScaledJobJobTargetRefTemplateSpecAffinityNodeAffinityPreferenceMatchExpressions.md  ScaledJobJobTargetRefTemplateSpecAffinityNodeAffinityPreferredDuringSchedulingIgnoredDuringExecution.md  ScaledJobJobTargetRefTemplateSpecAffinityNodeAffinityRequiredDuringSchedulingIgnoredDuringExecution.md  ScaledJobJobTargetRefTemplateSpecAffinityNodeAffinityRequiredDuringSchedulingIgnoredDuringExecutionNodeSelectorTerms.md  ScaledJobJobTargetRefTemplateSpecAffinityPodAffinity.md  ScaledJobJobTargetRefTemplateSpecAffinityPodAffinityPodAffinityTerm.md  ScaledJobJobTargetRefTemplateSpecAffinityPodAffinityPodAffinityTermLabelSelector.md  ScaledJobJobTargetRefTemplateSpecAffinityPodAffinityPreferredDuringSchedulingIgnoredDuringExecution.md  ScaledJobJobTargetRefTemplateSpecAffinityPodAffinityRequiredDuringSchedulingIgnoredDuringExecution.md  ScaledJobJobTargetRefTemplateSpecAffinityPodAntiAffinity.md  ScaledJobJobTargetRefTemplateSpecAwsElasticBlockStore.md  ScaledJobJobTargetRefTemplateSpecAzureDisk.md  ScaledJobJobTargetRefTemplateSpecAzureFile.md  ScaledJobJobTargetRefTemplateSpecCephfs.md  ScaledJobJobTargetRefTemplateSpecCephfsSecretRef.md  ScaledJobJobTargetRefTemplateSpecCinder.md  ScaledJobJobTargetRefTemplateSpecCinderSecretRef.md  ScaledJobJobTargetRefTemplateSpecConfigMap.md  ScaledJobJobTargetRefTemplateSpecConfigMapItems.md  ScaledJobJobTargetRefTemplateSpecConfigMapRef.md  ScaledJobJobTargetRefTemplateSpecContainers.md  ScaledJobJobTargetRefTemplateSpecCsi.md  ScaledJobJobTargetRefTemplateSpecCsiNodePublishSecretRef.md  ScaledJobJobTargetRefTemplateSpecDnsConfig.md  ScaledJobJobTargetRefTemplateSpecDnsConfigOptions.md  ScaledJobJobTargetRefTemplateSpecDownwardApi.md  ScaledJobJobTargetRefTemplateSpecDownwardApiFieldRef.md  ScaledJobJobTargetRefTemplateSpecDownwardApiItems.md  ScaledJobJobTargetRefTemplateSpecDownwardApiResourceFieldRef.md  ScaledJobJobTargetRefTemplateSpecEmptyDir.md  (+73 more)
scaledjobs.keda.sh-rust/src/: models.tgz
scaledjobs.keda.sh-rust/src/apis/: configuration.rs
scaledjobs.keda.sh-rust/src/models/: mod.rs  scaled_job.rs  scaled_job_authentication_ref.rs  scaled_job_job_target_ref.rs  scaled_job_job_target_ref_selector.rs  scaled_job_job_target_ref_selector_match_expressions.rs  scaled_job_job_target_ref_template.rs  scaled_job_job_target_ref_template_spec.rs  scaled_job_job_target_ref_template_spec_affinity.rs  scaled_job_job_target_ref_template_spec_affinity_node_affinity.rs  scaled_job_job_target_ref_template_spec_affinity_node_affinity_preference.rs  scaled_job_job_target_ref_template_spec_affinity_node_affinity_preference_match_expressions.rs  scaled_job_job_target_ref_template_spec_affinity_node_affinity_preferred_during_scheduling_ignored_during_execution.rs  scaled_job_job_target_ref_template_spec_csi.rs  (+101 more)
scaledobjects.keda.sh-rust/: Cargo.toml  README.md  ov3-scaledobjects.keda.sh.yaml
scaledobjects.keda.sh-rust/.openapi-generator/: FILES
scaledobjects.keda.sh-rust/docs/: ScaledObject.md  ScaledObjectAdvanced.md  ScaledObjectAdvancedHorizontalPodAutoscalerConfig.md  ScaledObjectAdvancedHorizontalPodAutoscalerConfigBehavior.md  ScaledObjectAdvancedHorizontalPodAutoscalerConfigBehaviorScaleDown.md  ScaledObjectAdvancedHorizontalPodAutoscalerConfigBehaviorScaleDownPolicies.md  ScaledObjectAdvancedHorizontalPodAutoscalerConfigBehaviorScaleUp.md  ScaledObjectAdvancedHorizontalPodAutoscalerConfigResourceMetrics.md  ScaledObjectAdvancedHorizontalPodAutoscalerConfigTarget.md  ScaledObjectAuthenticationRef.md  ScaledObjectScaleTargetRef.md  ScaledObjectTriggers.md  Status.md  StatusConditions.md  StatusScaleTargetGvkr.md
scaledobjects.keda.sh-rust/src/: lib.rs
(+37 files in other folders)
