[package]
name = "descaler"
version = "0.1.0"
authors = ["Peter Grace <pete.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.51.0"
kube-runtime = "0.51.0"
k8s-openapi = { version = "0.11.0", features = [ "v1_14"]}
serde = {version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4.14"
env_logger = "0.8.3"
prometheus = "0.9.0"
prometheus-static-metric = "0.2.0"
lazy_static = "1.4.0"
auditable = "0.1.0"
hyper = "0.13.7"
tokio = { version = "0.2.25", features = ["full"]}
anyhow = "1.0.38"
reqwest = { version = "0.11.1"}
again = "0.1.2"

[build-dependencies]
auditable-build = "0.1"
