[package]
name = "descaler"
version = "0.1.2"
authors = ["Peter Grace <pete.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.51.0", default_features = false, features = ["derive","native-tls"] }
kube-derive = "0.51.0"
kube-runtime = { version = "0.51.0", default_features = false }
k8s-openapi = { version = "0.11.0", default_features = false, features = [ "v1_16"]}
serde = {version = "1.0", features = ["derive"] }
schemars = "0.8.0"
schemars_derive = "0.8.0"
serde_yaml = "0.8"
serde_json = "1.0.64"
log = "0.4.14"
env_logger = "0.8.3"
prometheus = "0.9.0"
prometheus-static-metric = "0.2.0"
lazy_static = "1.4.0"
auditable = "0.1.0"
hyper = { version ="0.14.4", features = ["server"]}
tokio = { version = "1", features = ["full"]}
anyhow = "1.0.38"
reqwest = { version = "0.11.1"}
backoff = { version = "0.3.0", features = ["tokio"]}
futures = "0.3"
clap = {version = "2", features = ["suggestions", "color", "yaml"]}

[dependencies.openapi-scaledobjects]
path = "scaledobjects.keda.sh-rust"
version = "1.0"

[dependencies.openapi-scaledjobs]
path = "scaledjobs.keda.sh-rust"
version = "1.0"



[build-dependencies]
auditable-build = "0.1"

[dev-dependencies]
httpmock = "0.5.6"
httpmock-macros = "0.4.0"
