[package]
name = "openapi-scaledobjects"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "1.5"
kube = { version = "0.51.0", default_features = false, features = ["derive","native-tls"] }
kube-derive = "0.51.0"
kube-runtime = { version = "0.51.0", default_features = false }
k8s-openapi = { version = "0.11.0", features = ["v1_16"], default-features = false }
schemars = "0.8.0"
schemars_derive = "0.8.0"

[dependencies.reqwest]
version = "^0.10"
default-features = false
features = ["json"]

[dev-dependencies]
